// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is desktop 1`] = `
.c0 {
  background-color: #1d1b1b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 7px solid #444141;
}

<header
  className="c0"
  format="desktop"
>
  Wrapper
</header>
`;

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is mobile 1`] = `
.c0 {
  background-color: #1d1b1b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<header
  className="c0"
  format="mobile"
>
  Wrapper
</header>
`;

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is tablet 1`] = `
.c0 {
  background-color: #1d1b1b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 85px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom: 7px solid #444141;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<header
  className="c0"
  format="tablet"
>
  Wrapper
</header>
`;
